--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -1028,7 +1028,7 @@ The histogram does not show 19 sellers with more than 200 listings.
 
 Vendors were shipping drugs from 39 distinct countries,
 the frequency of countries the vendors were shipping from is in table \ref{shipcount}.
-Table \ref{richvendors} list just vendors that have achieved 10000EUR(150 vendors \~ 15\% ) or more in revenue.
+Table \ref{richvendors} list countries of vendors that have achieved 10000EUR(150 vendors \~ 15\% ) or more in revenue.
 Valhalla was originally estabilished as a local Finnish crypto market.
 That seems to be the reason for surprisingly many vendors shipping from Finland and also large percentage
 of Finns among high revenue vendors, because they might be on the market since
@@ -1086,9 +1086,7 @@ Unknown & 69 \\
     %\caption{Vendors revenue related to ratio of positive feedbacks with linear regression}
     }
     
-\caption[justification=centering]{Distribution of prices in listings and feedbacks\newline
-    X axis represents individual listings(feedbacks) sorted by price
-}
+\caption{Distribution  of vendors by their revenue}
 \end{figure}
 
 
@@ -1097,13 +1095,13 @@ We looked at total revenue of vendors, which is depicted in figure \ref{total-re
 The total revenue mentioned in the vendor's profile page is capped at 10 000 Eur.
 There are two major groups of venders regarded to their revenue. 
 Majority(598 vendors \~ 60\%) of vendors have not had any positive or negative feedbacks and all of these vendors
-but 3 earned less than 300EUR.
+but 3 earned less than 300EUR on cryptomarket over their lifetime.
 Note, that we were able to scrape just the vendors with active listings,
 so there might be much more vendors who stopped using Valhalla after
 not being able to earn substantional amount of money.
 The second group is 150 vendors (15\%) who earned 10 000 EUR or more.
 
-Vendors who were selling on the market repeatedly maintained high ratio of positive feedbacks.
+Vendors who had high revenue maintained high ratio of positive feedbacks.
 When counting only vendors with more than 10 reviews(304 vendors \~ 31\%),
 the mean is 93.7\% and median 98.3\% of positive feedbacks.
 Vendors with 1 to 10 reviews had on average 27.2\% of positive feedbacks.
@@ -1111,19 +1109,8 @@ Figure \ref{posratrev} shows the the distribution of vendors with similar
 positive feedbacks ratio and revenue nad its LOESS curve.
 These findings indicate, that market is competitive and
 having bad reputation during first few sales shuts down any opportunity
-for the vendor to continue selling his goods and that majority of vendors don't succeed.
-
-Most of the vendors had listings in just few categories.
-In graph \ref{catxrev} vendors are clustered by their revenue and number of different subcategories they have 
-active listings in. Most vendors sell goods just in one or two categories, hovewer there is substantional amount
-of vendors with high revenue selling in multiple categories.
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[scale=0.4]{catxrev}
-    \caption{Amount of vendors clustered by categories they sell and their total revenue}
-    \label{catxrev}
-\end{figure}
+for the vendor to continue selling his goods and that majority of vendors don't succeed or use
+market sporadically.
 
 The figure \ref{listingxprice} shows distribution of prices of all listings in
  the market on the left graph and on the right graph is the distribution of prices
@@ -1144,31 +1131,31 @@ The figure \ref{listingxprice} shows distribution of prices of all listings in
  with price greater than 1000 EUR
  673(2.7\%) listings them with price greater than 2000 Eur.
  The price distributions in \ref{listingxprice} shows,
- that while there exist substantional amount of extremely cheap or expensive listings,
- majority(5937 93\%) of trades were between 10 and 200 EUR.
+ that while there exist a lot of free or very expensive listings,
+ majority(5937 93\%) of trades were between 0 and 200 EUR.
+ There were 115 free listings on the market,
+ but no one of them was mantioned in feedbacks.
+ The free listings had titles like "CARDING SERVICE *FREE*",
+ "Custom order", "Free Carding Tutorial 2017" and "FREE SAMPLE 84\% MDMA CRYSTAL ROCKS"
  The titles of expensive listings don't indicate that 
 these listings are somehow special except the price.
- There were 115 listings with zero price on the market,
- but no one of them was mantioned in feedbacks.
- The listings with 0 price had titles like "CARDING SERVICE *FREE*",
- "Custom order", "Free Carding Tutorial 2017" and "FREE SAMPLE 84\% MDMA CRYSTAL ROCKS"
 
 \begin{figure}[!htb]
 \label{listingxprice}
 \subfloat{
+\label{listingxprice}
     \centering
     \includegraphics[width=0.5\linewidth]{listingxprice}
     %\caption{Prices of listings}
 }
 \subfloat{
+\label{flistingxprice}
     \centering
     \includegraphics[width=0.5\linewidth]{flistingxprice}
     %\caption{Prices of listings in feedbacks}
     }
     
-\caption[justification=centering]{Distribution of prices in listings and feedbacks\newline
-    X axis represents individual listings(feedbacks) sorted by price
-}
+\caption[justification=centering]{Distribution of prices in listings and feedbacks\newline }
 \end{figure}
 
 We calculated the last month revenue for each category
@@ -1181,17 +1168,18 @@ Average price of occured trades was similar in each category
 with two outliers. Opiates, which have the high price/dose ratio and 
 self-defence, which had only 4 trades, 2 of them were custom listings and 2 of them were guns.
 Custom listings contains no special tag and no description of any goods/services.
-They contain just titles like "custom listing for user: xxx", "custom listing 113" and so on.
+They contain just titles like "custom listing for user: xxx", "custom 013" and so on.
 We found 300 listings with word "custom" in their title. 
 We think that vendors and buyers use these custom listings in order to be able to protect themselves
 by cryptomarket Escrow service for already arranged deal.
 
+
 \begin{table}
-    \caption{Estimated monthly revenue for selected drug categories a by listing price}
-\hspace*{-2cm}
+    \caption{Estimated monthly revenue for selected drug categories based on feedbacks}
+\hspace*{-1cm}
     \label{categories}
     \begin{tabular}{|l|l|l|l|l|l|}
-Category & listings & feedbacks & revenue & average price & market share \\
+Category & listings & feedbacks &  \multicolumn{1}{|p{2cm}|}{\centering revenue \\ in EUR }& \multicolumn{1}{|p{2cm}|}{\centering average price \\ in EUR } & market share \\
 Cannabis & 5139 & 1883 & 135693 & 72 & 27.6\% \\
 Stimulants & 3493 & 1043 & 108157 & 103 & 22\% \\
 Opiates & 1662 & 489 & 83135 & 170 & 16.9\% \\
@@ -1208,25 +1196,45 @@ Classifieds &  649 & 18 & 2182 &  121  & 0.4\% \\
     \end{tabular}
 \end{table}
 
-Every feedback contains first two and last two characters of buyers username,
-and the rounded total number and price of trades performed by buyer.
-From our 6000 feedbacks, we gathered 2595 unique combinations of four letters from username,
-rounded number of trades and buyer's total spending.
+
+Most of the vendors had listings in just few categories.
+The graph \ref{catxrev} shows amount of vendors with given revenue and number of different subcategories they have 
+active listings in. Most vendors sell goods just in few categories, hovewer, vendors with 10000EUR or more in
+revenue tend to have listings in more categories. The boxchart \ref{boxcat} the distribution of vendors revenue based on category they were
+selling in. We have not count vendors with 0 revenue for the boxchart chart. If vendor was selling in multiple categories, we
+divided his revenue by the number of categories and counted him in both.
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[scale=0.4]{catxrev}
+    \caption{Amount of vendors with number of different categories they sell and their total revenue}
+    \label{catxrev}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[scale=0.4]{boxcat}
+    \caption{How much have Vendors earned based on category they sell}
+    \label{boxcat}
+\end{figure}
+
+
+Vendor pages contains counts of feedback gathered over lifetime, these were used
+in \ref{posratrev}. Vendors also has feedback pages, where feedbacks younger than
+1 month contain first two and last two characters of buyers username,
+, the rounded total number and price of trades performed by buyer.
+We used these feedbacks to gather informations about buyers.
+
 There are possible $36^4=1679616$ combinations of 4 alfanumerical characters.
-If we take rest of feedbacks 6000-2595 = 3405, than probability that
-
-It is possible that two different buyers have the username prefix, suffix, amount of 
-trades and revenue. 
-
-%narozeninovy paradox = $36^4*7 combination(1679616,2654)*2654!/(1679616^2654)$
-
-
-Feedbacks also contains how much the buyer spent overall on the Valhalla market.
-Buyers total spending and total performed trades are rounded just to few distinct values, so the
+From our 6000 feedbacks, we gathered 2433 unique combinations of four letters from username,
+when added rounded number of trades and buyer's total spending we got 2654.
+It is highly probable that some different buyers have the same username prefix, suffix, amount of 
+trades and revenue, because when considering buyers total spending and trades, we managed to increase
+the number of identified buyers. Buyers total spending and total performed trades are rounded just to few distinct values, so the
 following statistics are just estimates.
 
-Buyers have bought on average goods for 1176EUR on Valhalla market overall.
-Just 129(5\%) of buyers had bought goods worth around 10000EUR in total,
+Each buyer have bought on average goods for 1176EUR through all his trades on Valhalla market.
+Just 129(5\%) of buyers had bought goods with worth rounded to 10000EUR in total,
  1289(50\%) buyers have spendings 500EUR or less.
 This distribution is similar to revenue distribution of vendors, where
 vast majority of actors transfer just small amounts of value through Valhalla market and
@@ -1250,19 +1258,6 @@ The distribution of buyers total spending is on figure \ref{buyerxspend}.
 }
 \caption[justification=centering]{Distribution of buyers total spending and total performed trades}
 \end{figure}
-
-
-We were interested, if repeat buyers are loyal customers.
-
-
-\chapter{Testing and verification of the created tool}
-This chapter describes the way, the POC application was tested.
-
-The testing were performed by sending bitcoins to drug markets and withdrawing them.
-Than marking the addresses from where the bitcoins were received as 'a
-\section{Method of testing}
-\section{results}
-
 
 
 \chapter{Conclusion and future work}
@@ -1307,11 +1302,9 @@ At this phase, all data needed for using the application are in the database. We
 to start a web server that will serve webpage with GUI on address: "127.0.0.1:5000".
 
 
-
 \end{appendices}
 
 \printbibliography
-
 
 
 \end{document}
