cela statistika snad

--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -1016,7 +1016,7 @@ active listings, with average of 25.69 (SD = 58.06)
 and median = 11.00 listings per vendor.
 Most vendors tend to have just few active listings,
 as it can be seen on histogram \ref{listingsxsellers}.
-The histogram does not show 19 sellers with more than 200 listings.
+The histogram does not show 19 vendors with more than 200 listings.
 
 \begin{figure}[!htb]
     \centering
